--- a/Week 2/cart.html
+++ b/Week 2/cart.html
@@ -125,8 +125,7 @@
         </div>
         <div class="right-frame" id="right-frame-content">
             <!-- Initial content loaded dynamically -->
-            <h2>Welcome to our Online Book Store</h2>
-            <p>Select a department to see available books.</p>
+            <h2>Cart</h2>
         </div>
     </div>
 </body>
