--- a/Week 2/catalogue.html
+++ b/Week 2/catalogue.html
@@ -12,7 +12,7 @@
                 title: "Introduction to Algorithms", 
                 author: "Thomas H. Cormen", 
                 publisher: "MIT Press", 
-                price: "$50", 
+                price: "Rs 500", 
                 coverPage: "image1.jpg" 
             },
             { 
@@ -20,7 +20,7 @@
                 title: "Clean Code: A Handbook of Agile Software Craftsmanship", 
                 author: "Robert C. Martin", 
                 publisher: "Prentice Hall", 
-                price: "$40", 
+                price: "Rs 400", 
                 coverPage: "image2.jpg" 
             },
             { 
@@ -28,7 +28,7 @@
                 title: "Microelectronic Circuits", 
                 author: "Adel S. Sedra", 
                 publisher: "Oxford University Press", 
-                price: "$60", 
+                price: "Rs 600", 
                 coverPage: "image3.jpg" 
             },
             { 
@@ -36,7 +36,7 @@
                 title: "Fundamentals of Digital Logic with Verilog Design", 
                 author: "Stephen Brown", 
                 publisher: "McGraw-Hill Education", 
-                price: "$55", 
+                price: "Rs 550", 
                 coverPage: "image4.jpg" 
             },
             { 
@@ -44,7 +44,7 @@
                 title: "Engineering Mechanics: Statics", 
                 author: "J.L. Meriam", 
                 publisher: "Wiley", 
-                price: "$45", 
+                price: "Rs 450", 
                 coverPage: "image5.jpg" 
             },
             { 
@@ -52,7 +52,7 @@
                 title: "Thermodynamics: An Engineering Approach", 
                 author: "Yunus A. Cengel", 
                 publisher: "McGraw-Hill", 
-                price: "$65", 
+                price: "Rs 650", 
                 coverPage: "image6.jpg" 
             },
             { 
@@ -60,7 +60,7 @@
                 title: "Structural Analysis", 
                 author: "Russell C. Hibbeler", 
                 publisher: "Pearson", 
-                price: "$55", 
+                price: "Rs 550", 
                 coverPage: "image7.jpg" 
             },
             { 
@@ -68,7 +68,7 @@
                 title: "Fluid Mechanics", 
                 author: "Frank M. White", 
                 publisher: "McGraw-Hill Education", 
-                price: "$60", 
+                price: "Rs 600", 
                 coverPage: "image1.jpg" 
             }
         ];
@@ -135,7 +135,8 @@
         <div>
             <a href="index.html">Home</a> |
             <a href="login.html">Login</a> |
-            <a href="catalogue.html">Catalogue</a>
+            <a href="catalogue.html">Catalogue</a> |
+            <a href="cart.html">Cart</a>
         </div>
     </div>
     <div class="frames-container">
