--- a/Week 2/login.html
+++ b/Week 2/login.html
@@ -111,7 +111,8 @@
         <div>
             <a href="index.html">Home</a> |
             <a href="login.html">Login</a> |
-            <a href="catalogue.html">Catalogue</a> 
+            <a href="catalogue.html">Catalogue</a> |
+            <a href="cart.html">Cart</a>
         </div>
     </div>
     <!-- <div class="frames-container">
